--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 }
 body {
   background-color: #222831;
+  scrollbar-width: none;
 }
 
 .header {
@@ -15,6 +16,7 @@ body {
   justify-content: center;
   gap: 5px;
   padding: 16px 0;
+  overflow-x: hidden;
 }
 .header .main {
   justify-content: space-between;
@@ -24,21 +26,20 @@ body {
   padding: 16px 0;
 }
 .header .main .header-nav {
-  display: inline-flex;
-  flex-wrap: wrap;
-  height: 44px;
+  display: flex;
+  flex: 1 0 max-content;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
-  padding: 0 10px;
-  width: fit-content;
+  gap: clamp(10px, 8%, 3rem);
+  padding: 0 calc(8px + 0.3vw);
+  width: max-content;
 }
 .header .main .header-nav .category-link {
-  width: fit-content;
+  width: max-content;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #00ADB5;
-  font-size: 25px;
+  font-size: calc(15px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -52,35 +53,36 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px;
-  border-radius: 15px;
+  padding: calc(3px + 0.2vw);
+  border-radius: calc(12px + 0.3vw);
   border: 3px solid #EEEEEE;
   width: 60%;
+  min-width: 7rem;
+  height: fit-content;
   max-width: 400px;
 }
 .header .main .header-search-bar-ctn .header-search-bar .filter-search-bar {
   display: flex;
-  height: fit-content;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  height: fit-content;
+  padding: calc(4px + 0.2vw);
   background-color: #393E46;
-  border-radius: 8px;
+  border-radius: calc(5px + 0.3vw);
 }
 .header .main .header-search-bar-ctn .header-search-bar .filter-search-bar .filter-search-text {
   width: fit-content;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 18px;
+  font-size: calc(10px + 0.5vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
-  padding: 2px 4px;
+  padding: 0 calc(2px + 0.2vw);
 }
 .header .main .header-search-bar-ctn .header-search-bar .icon-search {
-  width: 36.3px;
-  height: 35px;
+  height: calc(18px + 0.6vw);
 }
 .header .variable {
   width: 89%;
@@ -92,20 +94,20 @@ body {
   padding: 16px 0;
 }
 .header .variable .header-buttons {
-  height: 35px;
+  height: calc(25px + 0.5vw);
   display: flex;
   align-items: center;
   flex: 1;
-  gap: 2.5rem;
+  gap: calc(20px + 1vw);
 }
 .header .variable .header-buttons .login-btn, .header .variable .header-buttons .register-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   flex: 0 0 auto;
-  gap: 10px;
-  padding: 10px 25px;
-  border-radius: 12px;
+  gap: calc(8px + 0.3vw);
+  padding: calc(6px + 0.3vw) calc(20px + 0.5vw);
+  border-radius: calc(10px + 0.4vw);
 }
 .header .variable .header-buttons .login-btn {
   background-color: #00ADB5;
@@ -118,7 +120,7 @@ body {
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 18px;
+  font-size: calc(12px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -131,7 +133,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1rem;
+  gap: calc(12px + 0.4vw);
   width: fit-content;
   align-items: center;
   position: relative;
@@ -147,7 +149,7 @@ body {
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #00ADB5;
-  font-size: 18px;
+  font-size: calc(13px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -163,7 +165,7 @@ body {
   flex: 1;
   object-position: left;
   object-fit: contain;
-  height: 60px;
+  height: clamp(2rem, 25px + 1.5vw, 60px);
 }
 
 .template {
@@ -178,20 +180,21 @@ body {
 
 .footer {
   display: flex;
-  width: 100%;
-  height: 340px;
-  align-items: flex-end;
-  gap: 3rem;
-  background-color: transparent;
   justify-content: center;
+  align-items: flex-end;
+  gap: calc(2rem + 1vw);
+  width: calc(100% - (13px + 0.4vw) * 2);
+  height: calc(7rem + 10vw);
+  padding: calc(13px + 0.4vw);
+  background-color: transparent;
 }
 .footer .footer-nav-credits {
   display: flex;
   flex-direction: column;
-  width: 37%;
   align-items: center;
-  gap: 9px;
-  padding: 20px 0;
+  gap: calc(5px + 0.3vw);
+  padding: calc(15px + 0.4vw) 0;
+  width: 40%;
 }
 .footer .footer-nav-credits .logo-ctn {
   display: flex;
@@ -202,50 +205,48 @@ body {
   object-position: center;
 }
 .footer .footer-nav-credits .footer-nav {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  position: relative;
-  flex: 0 0 auto;
+  gap: calc(8px + 0.5vw);
 }
 .footer .footer-nav-credits .footer-nav .header-nav-text {
-  width: 221px;
-  height: 25px;
-  margin-top: -1px;
+  width: fit-content;
+  height: calc(15px + 0.4vw);
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 18px;
+  font-size: calc(13px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
 }
 .footer .footer-nav-credits .credits {
-  width: 630px;
+  width: 90%;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 16px;
+  font-size: calc(11px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
 }
 .footer .footer-nav-credits .copyright {
-  width: 528px;
+  width: 70%;
   height: 20px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 16px;
+  font-size: calc(11px + 0.4vw);
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
 }
 .footer .footer-img-reading {
+  height: 100%;
+  width: 50%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  height: 100%;
-  width: 37%;
 }
 
 @font-face {
@@ -301,7 +302,8 @@ a {
 .banner .banner-text div.banner-description {
   position: relative;
   height: 65%;
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
   width: 85%;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
@@ -508,7 +510,8 @@ a {
 .category .category-list .category-card .category-card-cover:hover .hover-description .description-ctn {
   text-align: justify;
   font-size: clamp(10px, 8px + 0.3vw, 1.8rem);
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
   overflow-wrap: anywhere;
 }
 .category .category-list .category-card .category-card-cover:hover .hover-tags {
@@ -520,7 +523,8 @@ a {
   justify-content: center;
   gap: 2px 4px;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 .category .category-list .category-card .category-card-cover:hover .hover-tags a {
   margin: 0;
