--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{template "staticPath" .}}/css/base.css" />
-    <link rel="stylesheet" href="{{template "staticPath" .}}/css/style.css" />
+    <link rel="stylesheet" href="{{template "staticPath" .}}/css/{{template "cssFile" .}}.css" />
     <title>{{template "title" .}}</title>
 </head>
 <body>
