--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -2,6 +2,8 @@
 
 {{define "title"}}MangaThorg - Principal{{end}}
 
+{{define "cssFile"}}style{{end}}
+
 {{define "page"}}
 
   <!-- Banner element -->
